# bcs-services/cluster-resources/pkg/resource/manager/namespace_scoped.go
@@ -12,22 +12,18 @@
  * limitations under the License.
  */
 
-package resource
+package manager
 
 import (
-	"bytes"
 	"context"
 	"fmt"
 
-	v1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/apimachinery/pkg/apis/meta/v1/unstructured"
 	"k8s.io/apimachinery/pkg/runtime/schema"
-	"k8s.io/client-go/kubernetes"
-	"k8s.io/client-go/kubernetes/scheme"
 	"k8s.io/client-go/rest"
-	"k8s.io/client-go/tools/remotecommand"
 
+	res "github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/resource"
 	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/util"
 )
 
@@ -38,7 +34,7 @@ func ListNamespaceScopedRes(
 	resource schema.GroupVersionResource,
 	opts metav1.ListOptions,
 ) (*unstructured.UnstructuredList, error) {
-	client := newDynamicClient(conf)
+	client := res.NewDynamicClient(conf)
 	return client.Resource(resource).Namespace(namespace).List(context.TODO(), opts)
 }
 
@@ -50,7 +46,7 @@ func GetNamespaceScopedRes(
 	resource schema.GroupVersionResource,
 	opts metav1.GetOptions,
 ) (*unstructured.Unstructured, error) {
-	client := newDynamicClient(conf)
+	client := res.NewDynamicClient(conf)
 	return client.Resource(resource).Namespace(namespace).Get(context.TODO(), name, opts)
 }
 
@@ -61,7 +57,7 @@ func CreateNamespaceScopedRes(
 	resource schema.GroupVersionResource,
 	opts metav1.CreateOptions,
 ) (*unstructured.Unstructured, error) {
-	client := newDynamicClient(conf)
+	client := res.NewDynamicClient(conf)
 	namespace, err := util.GetItems(manifest, "metadata.namespace")
 	if err != nil {
 		return nil, fmt.Errorf("创建 %s 需要指定 metadata.namespace", resource.Resource)
@@ -80,7 +76,7 @@ func UpdateNamespaceScopedRes(
 	resource schema.GroupVersionResource,
 	opts metav1.UpdateOptions,
 ) (*unstructured.Unstructured, error) {
-	client := newDynamicClient(conf)
+	client := res.NewDynamicClient(conf)
 	// 检查 name 与 manifest.metadata.name 是否一致
 	manifestName, err := util.GetItems(manifest, "metadata.name")
 	if err != nil || name != manifestName {
@@ -99,62 +95,6 @@ func DeleteNamespaceScopedRes(
 	resource schema.GroupVersionResource,
 	opts metav1.DeleteOptions,
 ) error {
-	client := newDynamicClient(conf)
+	client := res.NewDynamicClient(conf)
 	return client.Resource(resource).Namespace(namespace).Delete(context.TODO(), name, opts)
-}
-
-// FetchPodManifest 获取指定 Pod Manifest
-func FetchPodManifest(clusterID, namespace, podName string) (map[string]interface{}, error) {
-	clusterConf := NewClusterConfig(clusterID)
-	podRes, err := GetGroupVersionResource(clusterConf, clusterID, Po, "")
-	if err != nil {
-		return nil, err
-	}
-
-	var ret *unstructured.Unstructured
-	ret, err = GetNamespaceScopedRes(clusterConf, namespace, podName, podRes, metav1.GetOptions{})
-	if err != nil {
-		return nil, err
-	}
-
-	return ret.UnstructuredContent(), nil
-}
-
-// ExecCommand 在指定容器中执行命令，获取 stdout, stderr
-func ExecCommand(clusterID, namespace, podName, containerName string, cmds []string) (string, string, error) {
-	clusterConf := NewClusterConfig(clusterID)
-	clientSet, err := kubernetes.NewForConfig(clusterConf)
-	if err != nil {
-		return "", "", err
-	}
-
-	req := clientSet.CoreV1().RESTClient().Post().
-		Resource("pods").
-		Name(podName).
-		Namespace(namespace).
-		SubResource("exec").
-		Param("container", containerName)
-
-	opts := &v1.PodExecOptions{
-		Command: cmds,
-		Stdin:   false,
-		Stdout:  true,
-		Stderr:  true,
-		TTY:     false,
-	}
-	req.VersionedParams(opts, scheme.ParameterCodec)
-	exec, err := remotecommand.NewSPDYExecutor(clusterConf, "POST", req.URL())
-	if err != nil {
-		return "", "", err
-	}
-
-	var stdout, stderr bytes.Buffer
-	err = exec.Stream(remotecommand.StreamOptions{
-		Stdout: &stdout,
-		Stderr: &stderr,
-	})
-	if err != nil {
-		return "", "", err
-	}
-	return stdout.String(), stderr.String(), err
 }
